Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.2 ----------

[w2x] Added user interface to edit custom configuration

---------- version 1.1.1 ----------

[w2l] Added user interface to edit custom configuration

[w2x] Added two attribute style maps: "underline" and "overstrike"

[w2l] Style maps now (again) works in tables

[w2l] Bugfix: Font is now selected correctly in list labels

[w2x] New option formulas (values starmath, latex, image+starmath (default), image+latex)
  to control export of formulas in xhtml 1.0 strict
  
[w2x] Avoid exporting redundant lang+dir information

[w2x] New option multilingual (default true) to turn of export of language information
  (except on the root element <html>)

[w2x] New option template_ids (default empty) to give the id's used to identity the parts
  of an xhtml template in the order content,header,footer,panel

[w2x] New option pretty_print (default true) to turn of pretty printing of xhtml source

[w2l] Bugfix: Avoid null pointer exception on empty metadata (date)

[w2x] Bugfix: Avoid null pointer exception on empty metadata (subject, keywords)

[w2x] Adapted to work with MathML without namespace (fix for change in OOo 3.2)

[w2l] Adapted to work with MathML without namespace (fix for change in OOo 3.2)

[w4l] Added help files

[w2x] Bugfix: A textposition of 0% is no longer considered to be superscript

[all] OFFICE_HOME and URE_HOME in build.xml renamed to OFFICE_CLASSES and URE_CLASSES,
  which should now point directly to the directory containing the jars

[w2x] Added support for text:start-value in outline numbering and list styles (the latter
  is only relevant if use_list_hack is true)

[all] Use zeropadding on exported images (ie. file-img001 etc.)

[w2l] Bugfix: Add \par after display equation when formatting>=convert_most

[w2l] The custom preamble is now available in the API as a normal option "custom-preamble"

[all] Extended configuration API with the new notion "complex" options
