@@ -37,7 +37,7 @@
  ************************************************************************/
  
 // This version is adapted for Writer2LaTeX
-// Version 1.0 (2008-11-22)
+// Version 1.2 (2010-03-15)
 
 package writer2latex.xmerge;
 
@@ -1282,5 +1282,15 @@ public class OfficeDocument
         
         manifestRoot.appendChild(docRoot);
     }
+
+    // TODO: We need these because we implement OutputFile (but in fact we shouldn't)
+	public String getMIMEType() {
+		return "";
+	}
+
+
+	public int getSequenceNumber() {
+		return -1;
+	}
 }
 
